# indicator-applet

./: .bzrignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  configure  configure.ac  main.c
data/: GNOME_FastUserSwitchApplet.server.in  GNOME_FastUserSwitchApplet.server.in.in  GNOME_IndicatorApplet.server.in  GNOME_IndicatorAppletAppmenu.server.in  GNOME_IndicatorAppletAppmenu.server.in.in  GNOME_IndicatorAppletComplete.server.in  GNOME_IndicatorAppletComplete.server.in.in  Makefile.am  Makefile.in  awn-indicator-applet.desktop.in.in  org.ayatana.panel.FastUserSwitchApplet.panel-applet.in.in  org.ayatana.panel.IndicatorApplet.panel-applet.in.in  org.ayatana.panel.IndicatorAppletAppmenu.panel-applet.in.in  org.ayatana.panel.IndicatorAppletComplete.panel-applet.in.in
debian/: changelog  control  copyright  indicator-applet-appmenu.install  indicator-applet-complete.install  indicator-applet-data.install  indicator-applet-session.install  indicator-applet.install  indicator-awn-applet.install  rules  source_indicator-applet.py  watch
debian/patches/: 01-fixed_compilation_error_with_glib_2.33.patch  01_libindicate_0_1_5.patch  01_stracciatella.patch  series
indicate/: Makefile.am  indicate-arg-types.py  indicatemodule.c
libindicate/: server.c
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  Makefile.in  __init__.py  applet-main.c  awn-applet-main.c  eggaccelerators.c  eggaccelerators.h  indicate-arg-types.py  indicate.defs  indicate.override  indicatemodule.c  shared.c  tomboykeybinder.c
src-session/: Makefile.am  applet-main.c
tests/: Makefile.am  im-client.py  listen-and-print.py
