AC_INIT(indicate-python, 0.2.0, eitan@ascender.com)
AC_PREREQ(2.50)
AC_CONFIG_SRCDIR(config.h.in)
AC_COPYRIGHT([Copyright 2009 Canonical])

PACKAGE=indicate-python
VERSION=0.2.0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)

PYGTK_REQUIRED=2.14.0
LIBINDICATE_REQUIRED=0.2.0
PYGOBJECT_REQUIRED=0.22

AM_MAINTAINER_MODE
AC_PROG_CC
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AM_PATH_PYTHON(2.3.5)
AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR(could not find Python headers)])

PKG_CHECK_MODULES(INDICATE_PYTHON, [pygtk-2.0 >= $PYGTK_REQUIRED
								   indicate >= $LIBINDICATE_REQUIRED
								   indicate-gtk >= $LIBINDICATE_REQUIRED
								   pygobject-2.0 >= $PYGOBJECT_REQUIRED])
AC_SUBST(INDICATE_PYTHON_CFLAGS)
AC_SUBST(INDICATE_PYTHON_LIBS)

AC_MSG_CHECKING(for pygtk defs)
PYGTK_DEFSDIR=`$PKG_CONFIG --variable=defsdir pygtk-2.0`
AC_SUBST(PYGTK_DEFSDIR)
AC_MSG_RESULT($PYGTK_DEFSDIR)

AC_MSG_CHECKING(for pygtk codegen)
PYGTK_CODEGEN="$PYTHON `$PKG_CONFIG --variable=codegendir pygtk-2.0`/codegen.py"
AC_SUBST(PYGTK_CODEGEN)
AC_MSG_RESULT($PYGTK_CODEGEN)

AC_CONFIG_FILES([
Makefile
src/Makefile
tests/Makefile
])

AC_OUTPUT

